@@ -1,0 +1,4 @@
+#include "EventFilter/Utilities/interface/RunBase.h"
+
+xdata::UnsignedInteger32 evf::RunBase::runNumber_=0;
+std::string              evf::RunBase::sourceId_ ="Offline";
